--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div class="main">
-        <div class="jumbotron jumbotron-fluid p-1">
+          <div class="jumbotron jumbotron-fluid p-1">
             <h1 class="display-4 text-center">Weather Dashboard</h1>
-      </div>
+          </div>
           <div class="row m-3">
               <!-- Search tab area -->
               <div class="col-3">
@@ -27,15 +27,15 @@
                           <button class="btn btn-secondary" type="button" id="search-button"><i class="fa fa-search"></i></button>
                       </div>
                   </div>
-                  <ul class="list-group list-unstyled">
-                      <li><button type="button" class="list-group-item list-group-item-action">Ottawa</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">London</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Paris</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Moscow</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Istanbul</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Miami</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Sydney</button></li>
-                      <li><button type="button" class="list-group-item list-group-item-action">Tokyo</button></li>
+                  <ul class="list-group list-unstyled" id="button-options">
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Ottawa</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">London</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Paris</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Moscow</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Istanbul</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Miami</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Sydney</button></li>
+                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Tokyo</button></li>
                   </ul>
               </div>
               <!-- Results area -->
@@ -44,11 +44,11 @@
                       <div class="col">
                           <div class="card">
                               <div class="card-body">
-                                  <h2 id="city-date">City & Date<span id="current-Icon"><img src="" alt=""></span></h2>
-                                  <p>Temperature: <span id="current-temp"></span></p>
-                                  <p>Humidity: <span id="current-humidity"></span></p>
-                                  <p>Wind Speed: <span id="current-windspeed"></span></p>
-                                  <p>UV Index: <span id="current-UV"></span></p>
+                                  <h2 id="city-date">City & Date</h2>
+                                  <p id="current-temp">Temperature: </p>
+                                  <p id="current-humidity">Humidity: </p>
+                                  <p id="current-windspeed">Wind Speed: </p>
+                                  <p id="current-UV">UV Index: </p>
                               </div>
                           </div>
                       </div>
@@ -57,19 +57,19 @@
                   <h3>5-Day Forecast:</h3>
                   <div class="row mt-3">
                       <div class="col">
-                          <div class="card">
-                              <div class="card-body">
-                                  <h5 class="card-title">Date :</h5>
-                                  <i><img id="Icon-1" src="" alt=""></i>
+                          <div class="card" style="min-width: 14rem;" >
+                              <div class="card-body" id="card-body-1">
+                                  <h5 id="card-body-1-h5" class="card-title">Date :</h5>
+                                  <i><img id="Icon-1"></i>
                                   <p class="card-text">Temp: <span></span></p>
                                   <p class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
                       <div class="col">
-                          <div class="card">
-                              <div class="card-body">
-                                  <h5 class="card-title">Date :</h5>
+                          <div class="card" style="min-width: 14rem;" >
+                              <div class="card-body" id="card-body-2">
+                                  <h5 id="card-body-2-h5" class="card-title">Date :</h5>
                                   <i><img id="Icon-2" src="" alt=""></i>
                                   <p class="card-text">Temp: <span></span></p>
                                   <p class="card-text">Humidity: <span></span></p>
@@ -77,9 +77,9 @@
                           </div>
                       </div>
                       <div class="col">
-                          <div class="card">
-                              <div class="card-body">
-                                  <h5 class="card-title">Date :</h5>
+                          <div class="card" style="min-width: 14rem;" >
+                              <div class="card-body" id="card-body-3">
+                                  <h5 id="card-body-3-h5" class="card-title">Date :</h5>
                                   <i><img id="Icon-3" src="" alt=""></i>
                                   <p class="card-text">Temp: <span></span></p>
                                   <p class="card-text">Humidity: <span></span></p>
@@ -87,9 +87,9 @@
                           </div>
                       </div>
                       <div class="col">
-                          <div class="card">
-                              <div class="card-body">
-                                  <h5 class="card-title">Date :</h5>
+                          <div class="card" style="min-width: 14rem;" >
+                              <div class="card-body" id="card-body-4">
+                                  <h5 id="card-body-4-h5" class="card-title">Date :</h5>
                                   <i><img id="Icon-4" src="" alt=""></i>
                                   <p class="card-text">Temp: <span></span></p>
                                   <p class="card-text">Humidity: <span></span></p>
@@ -97,9 +97,9 @@
                           </div>
                       </div>
                       <div class="col">
-                          <div class="card">
-                              <div class="card-body">
-                                  <h5 class="card-title">Date :</h5>
+                          <div class="card" style="min-width: 14rem;">
+                            <div class="card-body" id="card-body-5">
+                                <h5 id="card-body-5-h5" class="card-title">Date :</h5>
                                   <i><img id="Icon-5" src="" alt=""></i>
                                   <p class="card-text">Temp: <span></span></p>
                                   <p class="card-text">Humidity: <span></span></p>
