--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-1">
                                   <h5 id="card-body-1-h5" class="card-title">Date :</h5>
-                                  <i><img id="Icon-1"></i>
-                                  <p class="card-text">Temp: <span></span></p>
-                                  <p class="card-text">Humidity: <span></span></p>
+                                  <p id="card-body-1-temp" class="card-text">Temp: <span></span></p>
+                                  <p id="card-body-1-humid" class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
@@ -70,9 +69,8 @@
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-2">
                                   <h5 id="card-body-2-h5" class="card-title">Date :</h5>
-                                  <i><img id="Icon-2" src="" alt=""></i>
-                                  <p class="card-text">Temp: <span></span></p>
-                                  <p class="card-text">Humidity: <span></span></p>
+                                  <p id="card-body-2-temp" class="card-text">Temp: <span></span></p>
+                                  <p id="card-body-2-humid" class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
@@ -80,9 +78,8 @@
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-3">
                                   <h5 id="card-body-3-h5" class="card-title">Date :</h5>
-                                  <i><img id="Icon-3" src="" alt=""></i>
-                                  <p class="card-text">Temp: <span></span></p>
-                                  <p class="card-text">Humidity: <span></span></p>
+                                  <p id="card-body-3-temp" class="card-text">Temp: <span></span></p>
+                                  <p id="card-body-3-humid" class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
@@ -90,19 +87,17 @@
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-4">
                                   <h5 id="card-body-4-h5" class="card-title">Date :</h5>
-                                  <i><img id="Icon-4" src="" alt=""></i>
-                                  <p class="card-text">Temp: <span></span></p>
-                                  <p class="card-text">Humidity: <span></span></p>
+                                  <p id="card-body-4-temp" class="card-text">Temp: <span></span></p>
+                                  <p id="card-body-4-humid" class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
                       <div class="col">
                           <div class="card" style="min-width: 14rem;">
-                            <div class="card-body" id="card-body-5">
-                                <h5 id="card-body-5-h5" class="card-title">Date :</h5>
-                                  <i><img id="Icon-5" src="" alt=""></i>
-                                  <p class="card-text">Temp: <span></span></p>
-                                  <p class="card-text">Humidity: <span></span></p>
+                              <div class="card-body" id="card-body-5">
+                                  <h5 id="card-body-5-h5" class="card-title">Date :</h5>
+                                  <p id="card-body-5-temp" class="card-text">Temp: <span></span></p>
+                                  <p id="card-body-5-humid" class="card-text">Humidity: <span></span></p>
                               </div>
                           </div>
                       </div>
