--- a/index.html
+++ b/index.html
@@ -23,19 +23,12 @@
                   <h4>Seach for a City:</h4>
                   <div class="input-group mb-3">
                       <input type="text" class="form-control" id="entered-city" placeholder="Enter a city">
-                      <div class="input-group-append">
+                      <div class="input-group-append" id="search">
                           <button class="btn btn-secondary" type="button" id="search-button"><i class="fa fa-search"></i></button>
                       </div>
                   </div>
                   <ul class="list-group list-unstyled" id="button-options">
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Ottawa</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">London</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Paris</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Moscow</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Istanbul</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Miami</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Sydney</button></li>
-                      <li style="min-width: 8rem;"><button type="button" class="list-group-item list-group-item-action btn-block">Tokyo</button></li>
+                      <!-- <li style="min-width: 8rem;"><button type="button" onclick="onClicked()" class="list-group-item list-group-item-action btn-block">Ottawa</button></li> -->
                   </ul>
               </div>
               <!-- Results area -->
