--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="col-3">
                   <h4>Seach for a City:</h4>
                   <div class="input-group mb-3">
-                      <input type="text" class="form-control" id="entered-city" placeholder="Enter a city">
+                      <input type="text" class="form-control" id="entered-city" placeholder="Enter a city" value="Ottawa">
                       <div class="input-group-append" id="search">
                           <button class="btn btn-secondary" type="button" id="search-button"><i class="fa fa-search"></i></button>
                       </div>
