adding audio & style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                       </div>
                   </div>
                   <ul class="list-group list-unstyled" id="button-options">
-                      <!-- <li style="min-width: 8rem;"><button type="button" onclick="onClicked()" class="list-group-item list-group-item-action btn-block">Ottawa</button></li> -->
                   </ul>
               </div>
               <!-- Results area -->
@@ -101,10 +100,14 @@
 
     </div>
 
-
+    <audio controls autoplay loop hidden>
+        <source src="./sounds/nature.mp3" type="audio/mpeg">
+    </audio>
+    
     <!-- javascript -->
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
+    <small>created by: kemaldemirgil</small>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <!-- popper.js -->
