--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="main">
           <div class="jumbotron jumbotron-fluid p-1">
             <h1 class="display-4 text-center">Weather Dashboard</h1>
+            <h5 class="display-6 text-center">This app was created to get the current weather & the next 5 day weather forecast</h5>
           </div>
           <div class="row m-3">
               <!-- Search tab area -->
