--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 <body>
     <div class="main">
+            <!-- title -->
           <div class="jumbotron jumbotron-fluid p-1">
             <h1 class="display-4 text-center">Weather Dashboard</h1>
             <h5 class="display-6 text-center">This app was created to get the current weather & the next 5 day weather forecast</h5>
           </div>
           <div class="row m-3">
-              <!-- Search tab area -->
+              <!-- search tab area -->
               <div class="col-3">
                   <h4>Seach for a City:</h4>
                   <div class="input-group mb-3">
@@ -31,7 +32,7 @@
                   <ul class="list-group list-unstyled" id="button-options">
                   </ul>
               </div>
-              <!-- Results area -->
+              <!-- results area -->
               <div class="col">
                   <div class="row mb-3">
                       <div class="col">
@@ -49,6 +50,7 @@
                   <!-- 5 day results -->
                   <h3>5-Day Forecast:</h3>
                   <div class="row mt-3">
+                      <!-- day 1 -->
                       <div class="col">
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-1">
@@ -58,6 +60,7 @@
                               </div>
                           </div>
                       </div>
+                      <!-- day 2 -->
                       <div class="col">
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-2">
@@ -67,6 +70,7 @@
                               </div>
                           </div>
                       </div>
+                      <!-- day 3 -->
                       <div class="col">
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-3">
@@ -76,6 +80,7 @@
                               </div>
                           </div>
                       </div>
+                      <!-- day 4 -->
                       <div class="col">
                           <div class="card" style="min-width: 14rem;" >
                               <div class="card-body" id="card-body-4">
@@ -85,6 +90,7 @@
                               </div>
                           </div>
                       </div>
+                      <!-- day 5 -->
                       <div class="col">
                           <div class="card" style="min-width: 14rem;">
                               <div class="card-body" id="card-body-5">
@@ -99,6 +105,7 @@
           </div>
       </div>
     </div>
+    <!-- background nature sounds -->
     <audio controls autoplay loop hidden>
         <source src="./sounds/nature.mp3" type="audio/mpeg">
     </audio>
