--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="row m-3">
               <!-- search tab area -->
               <div class="col-3">
-                  <h4>Seach for a City:</h4>
+                  <h4>Search for a city:</h4>
                   <div class="input-group mb-3">
                       <input type="text" class="form-control" id="entered-city" placeholder="Enter a city" value="Ottawa">
                       <div class="input-group-append" id="search">
